@startuml

title __SECURITY's Class Diagram__\n

  namespace com.dh.Wesped {
    namespace Security {
      class com.dh.Wesped.Security.AppUser {
          - authorities : Collection<? extends GrantedAuthority>
          - city : String
          - email : String
          - id : Integer
          - name : String
          - password : String
          - surname : String
          + AppUser()
          {static} + build()
          + getAuthorities()
          + getCity()
          + getEmail()
          + getId()
          + getName()
          + getPassword()
          + getSurname()
          + getUsername()
          + isAccountNonExpired()
          + isAccountNonLocked()
          + isCredentialsNonExpired()
          + isEnabled()
          + setAuthorities()
          + setCity()
          + setEmail()
          + setId()
          + setName()
          + setPassword()
          + setSurname()
          + toString()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Security {
      class com.dh.Wesped.Security.AppUserService {
          + loadUserByUsername()
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Security {
      class com.dh.Wesped.Security.SecurityConfiguration {
          + authenticationManagerBean()
          + configure()
          + jwtTokenFilter()
          + passwordEncoder()
          # authenticationManager()
          # configure()
      }
    }
  }
  

  com.dh.Wesped.Security.AppUser .up.|> org.springframework.security.core.userdetails.UserDetails
  com.dh.Wesped.Security.AppUserService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.dh.Wesped.Security.AppUserService o-- com.dh.Wesped.Service.UserService : userService
  com.dh.Wesped.Security.SecurityConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.dh.Wesped.Security.SecurityConfiguration o-- com.dh.Wesped.Security.AppUserService : appUserService
  com.dh.Wesped.Security.SecurityConfiguration o-- com.dh.Wesped.Security.Jwt.JwtEntryPoint : jwtEntryPoint


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
